--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "isgri"
 version = "0.1.0"
-description = "Python package for ISGRI data analysis"
+authors = [{name = "Dominik Patryk Pacholski"}]
+license = {text = "MIT"}
+description = "Python package for INTEGRAL IBIS/ISGRI lightcurve analysis"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy",
-    "astropy",
-    "scipy",
+    "numpy>=2.3.5",
+    "astropy>=7.2.0",
 ]
 
 [tool.setuptools.packages.find]
