--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ description = "Python package for INTEGRAL IBIS/ISGRI lightcurve analysis"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=2.3.5",
-    "astropy>=7.2.0",
+    "numpy",
+    "astropy",
 ]
 
 [tool.setuptools.packages.find]
